--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,22 @@
 ---
 ---
 
+
+@article{Nexus,
+  abbr={Nexus},
+  title={Unveiling the Nexus: Harnessing IoT Ecosystems for Evading Internet Censorship},
+  author={Shi, Y. and Kon, P. and Ashley, W.},
+  year={2024},
+  month={April},
+  doi={10.1103/PhysRev.47.777},
+  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
+  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
+  pdf={https://eddshi.xyz/papers/nexus_poster.pdf},
+  altmetric={248277},
+  dimensions={true},
+  selected={true}
+}
+
 @string{aps = {American Physical Society,}}
 
 @book{einstein1920relativity,
@@ -12,7 +28,7 @@
 }
 
 @book{einstein1956investigations,
-  bibtex_show={true},
+  bibtex_show={false},
   title={Investigations on the Theory of the Brownian Movement},
   author={Einstein, Albert},
   year={1956},
@@ -22,7 +38,7 @@
 
 @article{einstein1950meaning,
   abbr={AJP},
-  bibtex_show={true},
+  bibtex_show={false},
   title={The meaning of relativity},
   author={Einstein, Albert and Taub, AH},
   journal={American Journal of Physics},
@@ -56,7 +72,7 @@
   google_scholar_id={qyhmnyLat1gC},
   video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
   additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  selected={true}
+  selected={false}
 }
 
 @article{einstein1905molekularkinetischen,
@@ -87,7 +103,7 @@
 }
 
 @Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
+  bibtex_show={false},
   abbr={Ann. Phys.},
   title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
   author={Albert Einstein},
@@ -103,7 +119,7 @@
 }
 
 @book{przibram1967letters,
-  bibtex_show={true},
+  bibtex_show={false},
   title={Letters on wave mechanics},
   author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
   year={1967},
