--- a/_posts/2024-06-09-misc.md
+++ b/_posts/2024-06-09-misc.md
@@ -20,6 +20,9 @@ related_posts: false
 ## ナンバーガール
 
 <!-- This is a simple image slider. It uses the [Swiper](https://swiperjs.com/) library. Check the [examples page](https://swiperjs.com/demos) for more information of what you can achieve with it. -->
+Formed in Fukuoka, Japan, in August, 1995 by guitarist and vocalist Shutoku Mukai, ナンバーガール (Number Girl) was probably the backbone of post-hardcore of Japan in the 1990s.
+Shutoku Mukai combined those harder alt-rock sounds with the kind of nostalgic post hardcore in a harmonic way - appealling to the melancholic and ventilating emotional with metalistic hardcore punk riffs, and a tendency towards rageful noise. 「TATOOあり」is my favorite song for this sole reason: the relieving ending guitar ripping. They are probably why picked up drum to begin with.
+
 
 <swiper-container keyboard="true" navigation="true" pagination="true" pagination-clickable="true" pagination-dynamic-bullets="true" rewind="true">
   <swiper-slide>{% include figure.liquid loading="eager" path="assets/img/number_girl_2.png" class="img-fluid rounded z-depth-1" %}</swiper-slide>
