--- a/_posts/2024-06-09-misc.md
+++ b/_posts/2024-06-09-misc.md
@@ -34,4 +34,6 @@ Shutoku Mukai combined those harder alt-rock sounds with the kind of nostalgic p
 <br>
 <br>
 
-# Books
+# People & Books
+
+I have also developed some interests in Continental Philosophy. Without being vague, the greatest introduction for me would undoubtedly be Albert Camus- a firm world federalist and absurdist. 
