--- a/_posts/2024-06-09-misc.md
+++ b/_posts/2024-06-09-misc.md
@@ -47,7 +47,7 @@ I have also developed some interests in Continental Philosophy. Without being va
 
 #### <i>The Myth of Sisyphus</i>
 
-It (he) invites us to reconsider our relationship with struggle or the mundane of modern post-industrial live: the struggle itself is not the agonizing process, the lag of purpose, rendering the ultimate form of nihilitisc existence. Many who thought that "Sisyphus was happy" at the end of the book because he accepted the complete meaninglessness of rolling the rock upwards day after day, hence able to to find happiness in that. However, contrarily, I found it to be hopeful: Sisyphus found a way to fight against Zeus, who punished him, through unwavering will to life, thus the purpose of existence- the <b>tranquil rage</b>.
+It (he) invites us to reconsider our relationship with struggle or the mundane of modern post-industrial life: the struggle itself is not the agonizing process, the lag of purpose, rendering the ultimate form of nihilitisc existence. Many who thought that "Sisyphus was happy" at the end of the book because he accepted the complete meaninglessness of rolling the rock upwards day after day, hence able to to find happiness in that. However, contrarily, I found it to be hopeful as a guide to respond to such absurdity as an individual: Sisyphus found a way to fight against Zeus, who punished him, through unwavering will to life, thus the purpose of existence- the <b>tranquil rage</b>.
 <swiper-container keyboard="true" navigation="true" pagination="true" pagination-clickable="true" pagination-dynamic-bullets="true" rewind="true">
   <swiper-slide>{% include figure.liquid loading="eager" path="assets/img/sisyphus_1.png" class="img-fluid rounded z-depth-1" %}</swiper-slide>
 </swiper-container>
@@ -59,7 +59,7 @@ It (he) invites us to reconsider our relationship with struggle or the mundane o
 # Games
 #### 素晴らしき日々 〜不連続存在〜　(Wonderful Everyday)
 
-Just play it :)
+Just play it!
 
 
 
