--- a/_posts/2024-06-09-misc.md
+++ b/_posts/2024-06-09-misc.md
@@ -18,7 +18,7 @@ related_posts: false
 <br>
 <br>
 
-## 1. ナンバーガール
+### 1. ナンバーガール
 
 <!-- This is a simple image slider. It uses the [Swiper](https://swiperjs.com/) library. Check the [examples page](https://swiperjs.com/demos) for more information of what you can achieve with it. -->
 Formed in Fukuoka, Japan, in August, 1995 by guitarist and vocalist Shutoku Mukai, ナンバーガール (Number Girl) was probably the backbone of post-hardcore of Japan in the 1990s.
@@ -36,14 +36,12 @@ Shutoku Mukai combined those harder alt-rock sounds with the kind of nostalgic p
 <br>
 
 # People & Books
+<br>
+<br>
 
-## 1. Albert Camus
+### 1. Albert Camus
 
 I have also developed some interests in Continental Philosophy. Without being vague, the greatest introduction for me would undoubtedly be Albert Camus- a firm world federalist and the founding figure of absurdism. Ridiculously, I found peace in his writing, such as <i>The Myth of Sisyphus</i>. 
-
-<swiper-container keyboard="true" navigation="true" pagination="true" pagination-clickable="true" pagination-dynamic-bullets="true" rewind="true">
-  <swiper-slide>{% include figure.liquid loading="eager" path="assets/img/albert-camus-7.jpg" class="img-fluid rounded z-depth-1" %}</swiper-slide>
-</swiper-container>
 
 <br>
 <br>
@@ -52,7 +50,8 @@ I have also developed some interests in Continental Philosophy. Without being va
 
 It (he) invites us to reconsider our relationship with struggle or the mundane of modern post-industrial life: the struggle itself is not the agonizing process, the lag of purpose, rendering the ultimate form of nihilitisc existence. Many who thought that "Sisyphus was happy" at the end of the book because he accepted the complete meaninglessness of rolling the rock upwards day after day, hence able to to find happiness in that. However, contrarily, I found it to be hopeful as a guide to respond to such absurdity as an individual: Sisyphus found a way to fight against Zeus, who punished him, through unwavering will to life, thus the purpose of existence- the <b>tranquil rage</b>.
 
-<swiper-container keyboard="true" navigation="true" pagination="true" pagination-clickable="true" pagination-dynamic-bullets="false" rewind="true">
+<swiper-container keyboard="true" navigation="true" pagination="true" pagination-clickable="true" pagination-dynamic-bullets="true" rewind="true">
+  <swiper-slide>{% include figure.liquid loading="eager" path="assets/img/albert-camus-7.jpg" class="img-fluid rounded z-depth-1" %}</swiper-slide>
   <swiper-slide>{% include figure.liquid loading="eager" path="assets/img/sisyphus_1.png" class="img-fluid rounded z-depth-1" %}</swiper-slide>
 </swiper-container>
 
@@ -61,11 +60,11 @@ It (he) invites us to reconsider our relationship with struggle or the mundane o
 <br>
 
 # Games
-#### 1. 素晴らしき日々 〜不連続存在〜　(Wonderful Everyday)
+### 1. 素晴らしき日々 〜不連続存在〜　(Wonderful Everyday)
 
 Just play it!
 
-<swiper-container keyboard="true" navigation="true" pagination="true" pagination-clickable="true" pagination-dynamic-bullets="false" rewind="true">
+<swiper-container keyboard="true" navigation="true" pagination="true" pagination-clickable="true" pagination-dynamic-bullets="true" rewind="true">
   <swiper-slide>{% include figure.liquid loading="eager" path="assets/img/subarashiki-1.jpg" class="img-fluid rounded z-depth-1" %}</swiper-slide>
   <swiper-slide>{% include figure.liquid loading="eager" path="assets/img/subarashiki-2.jpg" class="img-fluid rounded z-depth-1" %}</swiper-slide>
 </swiper-container>
