--- a/_posts/2024-06-09-misc.md
+++ b/_posts/2024-06-09-misc.md
@@ -68,7 +68,7 @@ It (he) invites us to reconsider our relationship with struggle or the mundane o
 
 ### 1. 素晴らしき日々 〜不連続存在〜　(Wonderful Everyday)
 
-<h4><b>Just play it :)<b></h4>
+#### <b>Just play it :)<\b>
 
 <swiper-container keyboard="true" navigation="true" pagination="true" pagination-clickable="true" pagination-dynamic-bullets="true" rewind="true">
   <swiper-slide>{% include figure.liquid loading="eager" path="assets/img/subarashiki-1.jpg" class="img-fluid rounded z-depth-1" %}</swiper-slide>
